// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner/> should have the right class names when a custom container class name is passed, variant is brand and size is large 1`] = `
<div
  className="slds-spinner slds-spinner_large slds-spinner_brand"
  role="status"
  style={Object {}}
>
  <div
    className="slds-spinner__dot-a"
  />
  <div
    className="slds-spinner__dot-b"
  />
</div>
`;

exports[`<Spinner/> should have the right class names when ehiter the variant and size are not passed 1`] = `
<div
  className="slds-spinner slds-spinner_medium"
  role="status"
  style={Object {}}
>
  <div
    className="slds-spinner__dot-a"
  />
  <div
    className="slds-spinner__dot-b"
  />
</div>
`;

exports[`<Spinner/> should have the right class names when size is small 1`] = `
<div
  className="slds-spinner slds-spinner_small"
  role="status"
  style={Object {}}
>
  <div
    className="slds-spinner__dot-a"
  />
  <div
    className="slds-spinner__dot-b"
  />
</div>
`;

exports[`<Spinner/> should have the right class names when size is x-small 1`] = `
<div
  className="slds-spinner slds-spinner_x-small"
  role="status"
  style={Object {}}
>
  <div
    className="slds-spinner__dot-a"
  />
  <div
    className="slds-spinner__dot-b"
  />
</div>
`;

exports[`<Spinner/> should have the right class names when size is xx-small 1`] = `
<div
  className="slds-spinner slds-spinner_xx-small"
  role="status"
  style={Object {}}
>
  <div
    className="slds-spinner__dot-a"
  />
  <div
    className="slds-spinner__dot-b"
  />
</div>
`;

exports[`<Spinner/> should have the right class names when variant is inverse and size is medium 1`] = `
<div
  className="slds-spinner slds-spinner_medium slds-spinner_inverse"
  role="status"
  style={Object {}}
>
  <div
    className="slds-spinner__dot-a"
  />
  <div
    className="slds-spinner__dot-b"
  />
</div>
`;
